# mlops_lab1

./: .env.dev  .env.prod  .env.test  .gitignore  .pre-commit-config.yaml  .sops.yaml  Dockerfile  LICENSE  README.md  main.py  public_key.asc  pyproject.toml  pytest.ini  secrets.yaml  settings.py
src/: app.py
src/core/: inference.py  training.py
tests/: test_settings.py
